Add support for non-finite inputs for PromQL