@@ -9,9 +9,12 @@ package org.elasticsearch.xpack.esql.expression.function.scalar.math;
 
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
+import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.compute.ann.Evaluator;
+import org.elasticsearch.compute.ann.Fixed;
 import org.elasticsearch.compute.expression.ExpressionEvaluator;
 import org.elasticsearch.xpack.esql.EsqlIllegalArgumentException;
+import org.elasticsearch.xpack.esql.capabilities.NonFiniteSupport;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
 import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
@@ -30,14 +33,22 @@ import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.Param
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isNumeric;
 import static org.elasticsearch.xpack.esql.type.EsqlDataTypeConverter.unsignedLongToDouble;
 
-public class Sqrt extends UnaryScalarFunction {
+public class Sqrt extends UnaryScalarFunction implements NonFiniteSupport {
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(Expression.class, "Sqrt", Sqrt::new);
     public static final FunctionDefinition DEFINITION = FunctionDefinition.def(Sqrt.class).unary(Sqrt::new).name("sqrt");
     public static final PromqlFunctionDefinition PROMQL_DEFINITION = PromqlFunctionDefinition.def()
-        .unaryValueTransformation(Sqrt::new)
+        .unaryNonFiniteValueTransformation(Sqrt::new)
         .description("Calculates the square root of all elements in the input vector.")
         .example("sqrt(http_requests_total)")
         .name("sqrt");
+
+    /**
+     * When {@code true}, non-finite results ({@code NaN}/{@code ±Inf}) are returned as-is instead of being
+     * rejected to {@code null}. Set only by the PromQL translation so that PromQL math follows IEEE-754
+     * semantics (e.g. {@code sqrt(-x)} returns {@code NaN}); the default is {@code false}, rejecting negative inputs to
+     * {@code null} (the only input on the double path that would otherwise yield a non-finite result).
+     */
+    private final boolean allowNonFinite;
 
     @FunctionInfo(returnType = "double", briefSummary = "Returns the square root of a number.", description = """
         Returns the square root of a number. The input can be any numeric value, the return value is always a double.
@@ -50,11 +61,23 @@ public class Sqrt extends UnaryScalarFunction {
             description = "Numeric expression. If `null`, the function returns `null`."
         ) Expression n
     ) {
+        this(source, n, false);
+    }
+
+    public Sqrt(Source source, Expression n, boolean allowNonFinite) {
         super(source, n);
+        this.allowNonFinite = allowNonFinite;
     }
 
     private Sqrt(StreamInput in) throws IOException {
         super(in);
+        this.allowNonFinite = NonFiniteSupport.readNonFinite(in);
+    }
+
+    @Override
+    public void writeTo(StreamOutput out) throws IOException {
+        super.writeTo(out);
+        writeNonFinite(out);
     }
 
     @Override
@@ -68,7 +91,7 @@ public class Sqrt extends UnaryScalarFunction {
         var fieldType = field().dataType();
 
         if (fieldType == DataType.DOUBLE) {
-            return new SqrtDoubleEvaluator.Factory(source(), field);
+            return new SqrtDoubleEvaluator.Factory(source(), field, allowNonFinite);
         }
         if (fieldType == DataType.INTEGER) {
             return new SqrtIntEvaluator.Factory(source(), field);
@@ -84,8 +107,8 @@ public class Sqrt extends UnaryScalarFunction {
     }
 
     @Evaluator(extraName = "Double", warnExceptions = ArithmeticException.class)
-    static double process(double val) {
-        if (val < 0) {
+    static double process(double val, @Fixed(includeInToString = false) boolean allowNonFinite) {
+        if (allowNonFinite == false && val < 0) {
             throw new ArithmeticException("Square root of negative");
         }
         return Math.sqrt(val);
@@ -114,12 +137,22 @@ public class Sqrt extends UnaryScalarFunction {
 
     @Override
     public final Expression replaceChildren(List<Expression> newChildren) {
-        return new Sqrt(source(), newChildren.get(0));
+        return new Sqrt(source(), newChildren.getFirst(), allowNonFinite);
     }
 
     @Override
     protected NodeInfo<? extends Expression> info() {
-        return NodeInfo.create(this, Sqrt::new, field());
+        return NodeInfo.create(this, Sqrt::new, field(), allowNonFinite);
+    }
+
+    @Override
+    public boolean allowNonFinite() {
+        return allowNonFinite;
+    }
+
+    @Override
+    public Expression toStrictVariant() {
+        return new Sqrt(source(), field(), false);
     }
 
     @Override
